[project]
name = "rh_qwenimagei2l"
description = "A ComfyUI custom node that generates Image-to-LoRA (I2L) LoRA from training images using DiffSynth-Studio Qwen-Image i2L pipelines."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["modelscope", "safetensors", "Pillow", "numpy"]

[project.urls]
Repository = "https://github.com/HM-RunningHub/ComfyUI_RH_QwenImageI2L"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/HM-RunningHub/ComfyUI_RH_QwenImageI2L/wiki"
"Bug Tracker" = "https://github.com/HM-RunningHub/ComfyUI_RH_QwenImageI2L/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_RH_QwenImageI2L"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

